--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -56,6 +56,14 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-black{
+    background: #000 !important;
+}
+
+.fucked-up{
+    background: #000 !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
