--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -64,6 +64,20 @@ body {
     background: #000 !important;
 }
 
+.overlay{
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+
+.text-uppercase-use{
+    text-transform: uppercase;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
