--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('/static/fonts/MabryPro-Regular.ttf') format('truetype');
+}
+
 html {
     height: 100%;
 }
@@ -7,7 +12,7 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Inter', sans-serif;
+    font-family: 'MyFont', sans-serif;
 }
 
 /* from Bulma */
