--- a/ecommerce_site/templates/base.html
+++ b/ecommerce_site/templates/base.html
@@ -95,7 +95,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row bg-white">
+        <div class="row bg-white border-top border-black">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#main-nav" aria-controls="#main-nav" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
