website page scroll added

--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -93,12 +93,55 @@ body {
 }
 
 /* added styling to form to center and remove border styling */
-.form-control {
+.form-control .product-quant {
     text-align: center;
     border-width: 0;
     z-index: -1;
 }
-  
+
+.scroll-right {
+    height: 50px;	
+    overflow: hidden;
+    position: relative;
+}
+.scroll-right h4 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    text-transform: uppercase;
+    /* Starting position */
+    -moz-transform:translateX(-100%);
+    -webkit-transform:translateX(-100%);	
+    transform:translateX(-100%);
+    /* Apply animation to this element */	
+    -moz-animation: scroll-right 25s linear infinite;
+    -webkit-animation: scroll-right 25s linear infinite;
+    animation: scroll-right 25s linear infinite;
+}
+   /* Move it (define the animation) */
+@-moz-keyframes scroll-right {
+    0%   { -moz-transform: translateX(-100%); }
+    100% { -moz-transform: translateX(100%); }
+}
+@-webkit-keyframes scroll-right {
+    0%   { -webkit-transform: translateX(-100%); }
+    100% { -webkit-transform: translateX(100%); }
+}
+@keyframes scroll-right {
+    0%   { 
+    -moz-transform: translateX(-100%); /* Browser bug fix */
+    -webkit-transform: translateX(-100%); /* Browser bug fix */
+    transform: translateX(-100%); 		
+    }
+    100% { 
+    -moz-transform: translateX(100%); /* Browser bug fix */
+    -webkit-transform: translateX(100%); /* Browser bug fix */
+    transform: translateX(100%); 
+    }
+}
 
 .btn-black {
     background: black;
