--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -3,6 +3,10 @@
     src: url('/static/fonts/MabryPro-Regular.ttf') format('truetype');
 }
 
+:root {
+    --color: lightblue;
+}
+
 html {
     height: 100%;
 }
@@ -12,6 +16,8 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
+    background-color: var(--color);
+    /* background-color: #ff90e8; */
     font-family: 'MyFont', sans-serif;
 }
 
@@ -84,6 +90,10 @@ body {
     position: absolute;
 }
 
+.stack-cards {
+    position: absolute;
+}
+
 .quantity-btn {
     width: 50px;
     height: 50px;
@@ -141,6 +151,10 @@ body {
     -webkit-transform: translateX(100%); /* Browser bug fix */
     transform: translateX(100%); 
     }
+}
+
+.hover-effect{
+    
 }
 
 .btn-black {
