order page created

--- a/ecommerce_site/home/templates/home/index.html
+++ b/ecommerce_site/home/templates/home/index.html
@@ -13,8 +13,8 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    The new collections are here
+                <h1 class="display-4text-black">
+                    Make a statement, upgrade your style!
                 </h1>
                 <div class="my-5">
                     <h4>
@@ -24,6 +24,7 @@
                         <a href="{% url 'products' %}" class="shop-now-button-pink btn btn-lg rounded-5 text-uppercase py-3 border border-black stack-buttons">Shop Now</a>
                     </h4>
                 </div>
+                
             </div>
         </div>
     </div>
