--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-    --color: lightblue;
+    --color: #ff90e8;
 }
 
 html {
@@ -42,6 +42,10 @@ body {
 
 .main-logo-link {
     width: fit-content;
+}
+
+.text-yellow{
+    color: #ffc900;
 }
 
 /* added styling for main shop now button and hover animation */
