--- a/ecommerce_site/templates/base.html
+++ b/ecommerce_site/templates/base.html
@@ -50,7 +50,7 @@
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0 excluded" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                            <button class="form-control btn border border-black rounded-0" type="submit">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
@@ -108,8 +108,8 @@
             </nav>
         </div>
         <div id="delivery-banner" class="row scroll-right"> 
-            <div class="col bg-black text-white">
-            <h4 class="logo-font my-0">Free delivery on orders over ${{ free_delivery_threshold }}! </h4>
+            <div class="col bg-black text-yellow">
+            <h4 class="logo-font my-0">Free delivery on orders over ${{ free_delivery_threshold }}! Free delivery on orders over ${{ free_delivery_threshold }}! Free delivery on orders over ${{ free_delivery_threshold }}! </h4>
             </div> 
         </div>
     </header>
