--- a/ecommerce_site/templates/505.html
+++ b/ecommerce_site/templates/505.html
@@ -8,8 +8,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Discover our exquisite collection of signet rings, pendants, and engagement rings. Shop now and find the perfect piece of jewelry to express your unique style and personality. Our selection includes timeless classics and modern designs crafted with the finest materials and expert craftsmanship. Find the perfect ring to mark your engagement or celebrate a special occasion, or choose a pendant to add a touch of elegance to any outfit. Explore our collection today and find the perfect piece to treasure for a lifetime.">
-        <meta name="keywords" content="signet rings, pendants, engagement rings, jewelry, fine jewelry, wedding rings, diamond rings, gold jewelry, silver jewelry, gemstones, unique jewelry, luxury jewelry, custom jewelry, personalized jewelry, fashion jewelry.">
     {% endblock %}
 
     {% block extra_meta %}
@@ -37,7 +35,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>RINGS.S. - Jewelry Website{% block extra_title %}{% endblock %}</title>
+    <title>Jewelry Website{% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
@@ -113,7 +111,7 @@
         </div>
         <div id="delivery-banner" class="row scroll-right"> 
             <div class="col">
-            <h4 class="logo-font my-0 free-delivery">Free delivery on orders over ${{ free_delivery_threshold }}! Free delivery on orders over ${{ free_delivery_threshold }}! Free delivery on orders over ${{ free_delivery_threshold }}! ${{ free_delivery_threshold }}! ${{ free_delivery_threshold }}! </h4>
+            <h4 class="logo-font my-0 free-delivery">YOU ARE LOST - 505 ERROR!</h4>
             </div> 
         </div>
     </header>
