--- a/ecommerce_site/home/templates/home/index.html
+++ b/ecommerce_site/home/templates/home/index.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container h-100 homepage">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 text-black">
-                    Make a statement, upgrade your style!
+                <h1 class="display-4 text-white text-uppercase">
+                    Make a statement, upgrade your rings!
                 </h1>
                 <div class="my-5">
                     <h4>
@@ -25,6 +25,8 @@
                     </h4>
                 </div>
                 
+            </div>
+            <div class="col-7 col-md-6 my-auto ring-bg"> 
             </div>
         </div>
     </div>
