--- a/ecommerce_site/templates/includes/mobile-top-header.html
+++ b/ecommerce_site/templates/includes/mobile-top-header.html
@@ -1,7 +1,8 @@
 <li class="list-inline-item">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
-            <div><i class="fas fa-search fa-lg"></i></div>
+            <!-- <div><i class="fas fa-search fa-lg"></i></div> -->
+            <img src="https://img.icons8.com/material-sharp/24/null/search-more.png"/>
             <p class="my-0">Search</p>
         </div>
     </a>
@@ -23,7 +24,8 @@
 <li class="list-inline-item dropdown">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
-            <div><i class="fas fa-user fa-lg"></i></div>
+            <!-- <div><i class="fas fa-user fa-lg"></i></div> -->
+            <img src="https://img.icons8.com/ios/24/null/group-background-selected.png"/>
             <p class="my-0">My Account</p>
         </div>
     </a>
@@ -43,7 +45,8 @@
 <li class="list-inline-item">
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
         <div class="text-center">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+            <!-- <div><i class="fas fa-shopping-bag fa-lg"></i></div> -->
+            <img src="https://img.icons8.com/material-outlined/24/null/fast-cart.png"/>
             <p class="my-0">
                 {% if grand_total %}
                     ${{ grand_total|floatformat:2 }}
