project almost complete

--- a/ecommerce_site/newsletter/templates/newsletter/signup.html
+++ b/ecommerce_site/newsletter/templates/newsletter/signup.html
@@ -1,62 +1,33 @@
 {% extends "base.html" %}
 {% load static %}
-{% block content %}
-{% if user.is_superuser %}
-<main class="mt-5 pt-5">
-  <div class="container">
-    <div class="accordion accordion-flush" id="list-of-subscribers">
-      {% for subscriber in subscriber_list %}
-      <div class="accordion-item">
-        <!-- accordeaon header -->
-        <h2 class="accordion-header" id="heading-{{ subscriber.id }}">
-          <button class="accordion-button collapsed border-bottom border-muted shadow-lg"
-                  type="button" data-bs-toggle="collapse" data-bs-target="#subscriber-id-{{ subscriber.id }}"
-                  aria-expanded="true" aria-controls="subscriber-id-{{ subscriber.id }}">
-            {{ subscriber.email }}
-          </button>
-        </h2>
-        <!-- accordeon body -->
-        <div id="subscriber-id-{{subscriber.id}}" class="accordion-collapse collapse" aria-labelledby="heading-{{subscriber.id}}" data-bs-parent="#list-of-subscribers">
-          <div class="accordion-body">
-            <div class="container">
-              <div class="row">
-                <!-- body here - need to add the date when signed up, agreed for policy if is a user -->
-                {% if subscriber.subscribed %}
-                <p>Newsletter subscribed on {{ subscriber.created_on }}
-                </p>
-                {% if subscriber.accepted_privacy_policy %}
-                <p>The Privacy Policy was accepted at the time of registration. 
-                </p>
-                {% endif %}
-                {% else %}
-                <p>This email is no longer subscribed to the newsletter
-                </p>
-                {% endif %}
-                {% if subscriber.registered_user.username %}
-                <p>This email has been added to newsletter subscription by {{ subscriber.registered_user.username }}
-                </p>
-                {% endif %}
-                {% if subscriber.subscribed %}
-                <!-- button at the end of the card -->
-                <div class="text-center mt-3">
-                  <a href="/newsletter/unsubscribe/{{subscriber.id}}/"
-                     class="btn btn-outline-warning btn-sm">
-                    Unsubscribe
-                  </a>
-                </div> 
-                {% endif %}
-              </div>
-            </div>
-          </div> 
-          <!-- end of .accordeon-body -->
-        </div> 
-      </div>
-      {% empty %}
-      <h4>You have no subscribers
-      </h4>
-      {% endfor %}
+
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
     </div>
-  </div>
-</main>
-{% endif %}
+{% endblock %}
+
+{% block content %}
+    <div class="container h-100 homepage">
+        <h2 class="logo-font mb-4">Sign Up!</h2>
+        <h5 class="text-muted">Find out more about our latest offers</h5>
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit">Submit</button>
+        </form> 
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} mt-3" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}     
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    <script src="{% static 'js/script.js' %}"></script>
 {% endblock %}
