--- a/ecommerce_site/about/templates/about/about.html
+++ b/ecommerce_site/about/templates/about/about.html
@@ -23,6 +23,7 @@
                     Our collection of fine jewelry features a range of styles and designs, from timeless classics to contemporary creations, all crafted with precision and expertise. We offer a wide selection of engagement rings, signet rings, pendants, and other accessories, all made with the finest materials, including precious metals and gemstones where we working with the <a rel="nofollow" href="https://castrosmith.com/" target="_blank">best partners</a> in the industry.
                 </p>
                 <h2 class="text-uppercase about-style d-flex justify-content-center"><a href="{% url 'contact' %}" style="text-decoration:none">Contact us here</a></h2>
+                <h5 class="text-uppercase about-style d-flex justify-content-center"><a href="{% url 'newsletter_signup' %}" style="color: inherit">Future Newsletter Sign Up</a></h5>
             </div>
         </div>
 
