--- a/ecommerce_site/static/css/base.css
+++ b/ecommerce_site/static/css/base.css
@@ -28,18 +28,14 @@ body {
     background-position: 50%;
     height: 100%;
     width: 100%;
-    /* background-position: 70%; */
-    /* background-size: 100%; */
     z-index: 100;
 }
 
 .no-bottom-border {
-    /* border-top: 1px solid #000; */
     border-left: 1px solid #000;
     border-right: 1px solid #000;
 }  
 
-/* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -123,7 +119,6 @@ body {
 }
 
 /* Styling About Page */
-
 .about-style{
     text-align: justify;
     color: lightblue;
@@ -131,7 +126,6 @@ body {
 }
 
 /* Card styling css effect */
-
 .card{
     transition: transform 250ms;
 }
@@ -141,10 +135,14 @@ body {
 }
 
 /* Adding styling for free delivery button*/
-
 .free-delivery{
     -webkit-text-stroke: 1px black; /* width and color */
     color: var(--delivery);
+}
+
+/* Justify text class */
+.custom-justify{
+    text-align: justify;
 }
 
 /* added styling to form to center and remove border styling */
@@ -196,10 +194,6 @@ body {
     -webkit-transform: translateX(100%); /* Browser bug fix */
     transform: translateX(100%); 
     }
-}
-
-.hover-effect{
-    
 }
 
 .btn-black {
@@ -262,7 +256,6 @@ body {
 	top: 0;
 	left: 0;
 	position: fixed;
-	/* background: white; */
 	z-index: -1;
 }
 
