--- a/ecommerce_site/templates/includes/mobile-top-header.html
+++ b/ecommerce_site/templates/includes/mobile-top-header.html
@@ -1,9 +1,8 @@
-<li class="list-inline-item">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="list-inline-item">
+    <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="mobile searchbar">
         <div class="text-center">
-            <!-- <div><i class="fas fa-search fa-lg"></i></div> -->
-            <img src="https://img.icons8.com/material-sharp/24/null/search-more.png"/>
-            <p class="my-0">Search</p>
+            <img src="https://img.icons8.com/material-sharp/24/null/search-more.png" alt="search"/>
+            <span class="my-0">Search</span>
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
@@ -20,13 +19,12 @@
             </div>
         </form>
     </div>
-</li>
-<li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+</div>
+<div class="list-inline-item dropdown">
+    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options-mobile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="mobile account info">
         <div class="text-center">
-            <!-- <div><i class="fas fa-user fa-lg"></i></div> -->
-            <img src="https://img.icons8.com/ios/24/null/group-background-selected.png"/>
-            <p class="my-0">My Account</p>
+            <img src="https://img.icons8.com/ios/24/null/group-background-selected.png" alt="User Account"/>
+            <span class="my-0">My Account</span>
         </div>
     </a>
     <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -41,19 +39,18 @@
             <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
         {% endif %}
     </div>
-</li>
-<li class="list-inline-item">
+</div>
+<div class="list-inline-item">
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
         <div class="text-center">
-            <!-- <div><i class="fas fa-shopping-bag fa-lg"></i></div> -->
-            <img src="https://img.icons8.com/material-outlined/24/null/fast-cart.png"/>
-            <p class="my-0">
+            <img src="https://img.icons8.com/material-outlined/24/null/fast-cart.png" alt="Shopping Cart"/>
+            <span class="my-0">
                 {% if grand_total %}
                     ${{ grand_total|floatformat:2 }}
                 {% else %}
                     $0.00
                 {% endif %}
-            </p>
+            </span>
         </div>
     </a>
-</li>
+</div>
